platform-chart/templates/front/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-nginx 
  labels:
    
spec:
  
  ingressClassName: nginx
        
  rules:
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
